[tool.poetry]
name = "torchdyno"
version = "0.2.2"
description = "A PyTorch-based library for Reservoir Computing and dynamical systems."
authors = [
    "Valerio De Caro <valerio.decaro@di.unipi.it>",
]
maintainers = [
    "Valerio De Caro <valerio.decaro@di.unipi.it>",
    "Geremia Pompei <geremiapompei@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
numpy = "^2.1.3"
pandas = "^2.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
commitizen = "^3.30.1"
pre-commit = "^4.0.1"
isort = "^5.13.2"
pycln = "^2.4.0"
pylint = "^3.3.1"
docformatter = { extras = ["tomli"], version = "^1.7.5" }

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
mypy = "^1.13.0"
wheel = "^0.45.0"
setuptools = "^75.5.0"
twine = "^5.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.1.3"
jinja2 = "^3.1.4"
docformatter = {extras = ["tomli"], version = "^1.7.5"}
sphinx-autobuild = "^2024.10.3"
enum-tools = {extras = ["sphinx"], version = "^0.12.0"}
sphinx-favicon = "^1.0.1"
sphinx-design = "^0.6.1"
myst-parser = "^4.0.0"
sphinx-icon = "^0.2.2"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.2"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
    "torchdyno/__init__.py:__version__",
    "setup.py:version",
]

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip = ["__init__.py"]

[tool.docformatter]
recursive = true
black = true
diff = true
tab-width = 4

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov-report=xml --cov-report=term-missing --cov"
filterwarnings = ["ignore::DeprecationWarning"]
